# MDGP

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_imports.py
data/texts/: sample.txt
examples/: analysis_example.py
lance_db/: __init__.py  lance_manager.py
mdgp_processors/: __init__.py  pipeline.py
mdgp_processors/analysis/: __init__.py  data_analyzer.py  evaluation_analyzer.py  visualizer.py
mdgp_processors/dedupers/: __init__.py  text_deduper.py
mdgp_processors/evaluators/: __init__.py
mdgp_processors/filters/: __init__.py  audio_duration_filter.py  image_resolution_filter.py  quality_score_filter.py  text_length_filter.py
mdgp_processors/models/: __init__.py  huggingface_model.py  local_model.py  model_factory.py  model_interface.py  model_operator.py  openai_model.py
mdgp_processors/ops/: __init__.py  base_operator.py
mdgp_processors/ops/dedupers/: __init__.py  text_deduper.py
mdgp_processors/ops/filters/: __init__.py  (+4 more)
mdgp_processors/readers/: __init__.py  csv_reader.py  lance_reader.py  parquet_reader.py
mdgp_processors/writers/: __init__.py  lance_writer.py
multimodal_processor/: __init__.py  file_processor.py  file_processor_interface.py  local_file_processor.py  s3_file_processor.py
streamlit_ui/: __init__.py  ui_components.py
streamlit_ui/pages/: __init__.py  data_processing_page.py  directory_page.py  home_page.py  processing_page.py  statistics_page.py
tests/: test_analysis.py  test_import.py  test_lance_pipeline.py  test_model_operator.py  test_nemo_import.py  test_operator_params.py  test_pipeline.py
(+12 files in other folders)
